# miniforsports

./: Dockerfile  README.md  deploy-docker-secrets.py  deploy-docker.sh  deploy.sh  docker-run-secrets.py  docker-run.py  pyproject.toml  testtest.py
.cert/: okgbQ7if3oUZZk-fwsWKPXQK783Djvr30LJUnZKVcEM
.config/: deploy-test.nginx  gunicorn.py  supervisord.conf
app/: parser.py
app/config/: settings.py  urls.py
app/crawling/: admin.py  crawling.py  models.py  parser.py  views.py
app/crawling/migrations/: 0001_initial.py
app/sports/: views.py
app/templates/: base.html
app/templates/crawling/: crawling.html
