[tool.poetry]
name = "deploy-test"
version = "0.1.0"
description = ""
authors = ["moonpeter <moonpeter@kakao.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
boto3 = "^1.12.5"
django-extensions = "^2.2.8"
django-storages = "^1.9.1"
django-secrets-manager = "^0.1.10"
pillow = "^7.0.0"
psycopg2-binary = "^2.8.4"
requests = "^2.23.0"
gunicorn = "^20.0.4"
supervisor = "^4.1.0"
beautifulsoup4 = "^4.8.2"
ipython = {extras = ["notebook"], version = "^7.12.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
